# glyphify

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: testing.yml
docs/: conf.py
glyphify/: discord.json  emoticons.json  main.py
glyphify/classes/: application.py  arguments.py  discord_rpc.py  settings.py
glyphify/services/fonts/: auto.py  base.py  json.py  map.py
glyphify/utils/: debug.py  json.py  logs.py  path.py  random.py  thread.py  update.py  validate.py
glyphify/web/: index.html  trex.html
glyphify/web/static/js/trex/: index.js  sounds.js
glyphify/web/static/js/trex/game/: DinoGame.js
glyphify/web/templates/: index.html
tests/test_utils/: test_logs.py
